--- a/index.html
+++ b/index.html
@@ -27,16 +27,5 @@
 </head>
 <body>
   <div id="message">Başlamak için tıkla 😈</div>
-  <img id="scare" src="https://i.imgur.com/jlVoZ3p.jpg" alt="BOO!">
-  <audio id="scream" src="https://www.soundjay.com/human/sounds/scream-1.mp3"></audio>
-
-  <script>
-    const msg = document.getElementById("message");
-    const img = document.getElementById("scare");
-    const scream = document.getElementById("scream");
-
-    document.body.addEventListener("click", () => {
-      msg.style.display = "none";
-      img.style.display = "block";
-      scream.play();
-      i
+  <img id="scare" src="https://i.ibb.co/tQ3Mbd1/scary-face.jpg" alt="BOO!">
+  <audio id="scream" src="https://
